--- a/images/bo-ga-phu-warmdream-freesize-phi-lua/config.ini
+++ b/images/bo-ga-phu-warmdream-freesize-phi-lua/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-phu-warmdream-freesize-phi-lua.html
 lastopen = 2024-06-10 00:45:38
 
 [search]
-lastsearch = 2024-07-26 11:33:44
+lastsearch = 2024-07-26 12:35:39
 
 [changagoidem.co]
 match = 8.3%%
@@ -27,14 +27,14 @@ title = Chăn Ga Gối - Dream House | Van Trai
 url = https://www.facebook.com/changagoidemdreamhouse/
 
 [sieuthimuare.com]
-match = 2.8%%
-title = Bộ Chăn Ga Gối Lụa Sky Silk Tencel 120s Cao Cấp
-url = https://sieuthimuare.com/chan-ga-goi-lua-sky-silk/
+match = 0.0%%
+title = Bộ Chăn Ga Gối Phi Lụa 5 Món Chần Bông Thêu Sang ...
+url = https://sieuthimuare.com/chan-ga-goi-phi-lua-chan-bong/
 
 [vuanem.com]
 match = -2.8%%
 title = Top 15 mẫu drap giường phi lụa được yêu thích nhất
-url = https://vuanem.com/blog/mau-drap-giuong-phi-lua.html?srsltid=AfmBOoqrNPfuxjUr00-SmORNqWAmpwJy0XPyOW7P7LuTAW5dsSNcfgbx
+url = https://vuanem.com/blog/mau-drap-giuong-phi-lua.html
 
 [diepxuan.com]
 match = 17.1%%
@@ -42,9 +42,9 @@ title = Điệp Xuân Chăn ga gối đệm Điệp Xuân
 url = https://diepxuan.com/
 
 [muathongminh.vn]
-match = -5.6%%
-title = Bộ ga giường Lụa Dream City cao cấp cho căn hộ đầy đủ ...
-url = https://muathongminh.vn/bo-ga-giuong-lua-dream-city-cao-cap-cho-can-ho-day-du-size-drap-phu-hoac-bo-chun-p.1__4682008640__50670826
+match = -16.7%%
+title = Lịch sử giá Bộ chăn ga gối phi lụa Dream city chất liệu ...
+url = https://muathongminh.vn/bo-chan-ga-goi-phi-lua-theu-chu-h-luxury-life-mem-min-sang-trong-set-lua-4-mon-chan-tran-he-mat-lanh-p.1__16513396310__230538458
 
 [simplici7y.com]
 match = 0.0%%
