--- a/images/chan-5-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-5-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-10 00:08:59
 
 [search]
-lastsearch = 2024-07-26 10:20:45
+lastsearch = 2024-07-26 12:31:21
 
 [h5.lazada.vn]
 match = -11.1%%
@@ -27,9 +27,9 @@ title = Chăn tuyết nhung hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chăn tuyết nhung
 
 [demxanh.com]
-match = 33.3%%
-title = Chăn lông tuyết | Chăn lông cao cấp
-url = https://demxanh.com/chan-long-tuyet.html
+match = -18.5%%
+title = Chăn tuyết Hàn Quốc Soft 2kg màu trắng hình tim
+url = https://demxanh.com/chan-tuyet-han-quoc-soft-2kg-mau-trang-hinh-tim.html
 
 [ninhouse.vn]
 match = 32.0%%
