--- a/images/chieu-lac-d2-14/config.ini
+++ b/images/chieu-lac-d2-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-14.html
 lastopen = 2024-06-21 06:28:49
 
 [search]
-lastsearch = 2024-07-26 06:18:14
+lastsearch = 2024-07-26 12:41:54
 
 [www.diepxuan.com]
 match = 33.3%%
@@ -17,9 +17,9 @@ title = Sơ đồ sân bay Tân Sơn Nhất ga nội địa, quốc tế MỚI N
 url = https://vinpearl.com/vi/so-do-san-bay-tan-son-nhat
 
 [www.facebook.com]
-match = -60.0%%
-title = Celadon Sports & Resort Club
-url = https://www.facebook.com/photo.php?fbid=754173426748498&set=a.590919083073934&type=3
+match = -253.3%%
+title = Black Kingdom - D2 - Milio E - Cái Ôm Ấm Áp: - Hồi chiêu ...
+url = https://www.facebook.com/photo.php?fbid=822787286517092&id=100063574839369&set=a.647966903999132&locale=mt_MT
 
 [phongthuykyhoa.com]
 match = -73.3%%
@@ -87,9 +87,9 @@ title = D2 Club (Ma Cao, Trung Quốc) - Đánh giá - Tripadvisor
 url = https://www.tripadvisor.com.vn/Attraction_Review-g664891-d4925838-Reviews-D2_Club-Macau.html
 
 [m.facebook.com]
-match = -200.0%%
-title = Ways Station Bình Thạnh: 🏠 281 Nguyễn Văn Đậu, P. ...
-url = https://m.facebook.com/waysstation/photos/a.179106562519975/1189872421443379/?type=3
+match = -140.0%%
+title = Ways Station Gaming - "T hết tiền rồi ...
+url = https://m.facebook.com/waysstation/photos/t-hết-tiền-rồi-tối-nay-đừng-đi-bar-ra-net-nhé-cho-rẻ-t-chơi-pubg-còn-m-chơi-liên/1163379434092678/
 
 [www.youtube.com]
 match = -133.3%%
@@ -395,4 +395,9 @@ url = https://www.circlek.com.vn/vi/he-thong-circle-k/
 match = -66.7%%
 title = Hộp 14 bút màu Pororo Hàn Quốc
 url = https://hellocon.vn/hop-14-but-mau-pororo-han-quoc
+
+[mn-pvinh.tphue.thuathienhue.edu.vn]
+match = -126.7%%
+title = Kế hoạch tuần - Trường mầm non Phước Vĩnh
+url = http://mn-pvinh.tphue.thuathienhue.edu.vn/ke-hoach/ke-hoach-tuan/kh-tuan-cac-khoi-lop/kh-tuan-lop-d2/ke-hoach-cua-lop-d2-tuan-43-nam-2023/
 
