--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-26 11:48:03
+lastsearch = 2024-07-26 12:45:45
 
 [www.georgianicols.com]
 match = -69.2%%
@@ -32,9 +32,9 @@ title = Svara
 url = https://en.wikipedia.org/wiki/Svara
 
 [www.facebook.com]
-match = -61.5%%
-title = Northwest Georgia Scanner
-url = https://www.facebook.com/NWGAScanner/
+match = -84.6%%
+title = 3:16 Healthcare | Bremen GA
+url = https://www.facebook.com/316Healthcare/
 
 [www.youtube.com]
 match = -269.2%%
@@ -237,9 +237,9 @@ title = Henny Penny EC05-001 TERM RING #10 16-14 GA NI PL
 url = https://www.partstown.com/henny-penny/henec05-001
 
 [pubs.acs.org]
-match = -315.4%%
-title = 4 V Na Solid State Batteries Enabled by a Scalable Sodium ...
-url = https://pubs.acs.org/doi/10.1021/acsenergylett.4c01855
+match = -338.5%%
+title = Structure and Role of a Ga-Promoter in Ni-Based Catalysts for ...
+url = https://pubs.acs.org/doi/10.1021/jacsau.3c00677
 
 [www.postercompliance.com]
 match = -207.7%%
