--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-07-26 11:46:29
+lastsearch = 2024-07-26 12:46:27
 
 [en.wikipedia.org]
 match = 15.0%%
@@ -82,9 +82,9 @@ title =
 url = https://www.icmec.org/wp-content/uploads/2019/01/ICMEC-South-Korea-National-Legislation-updated.pdf
 
 [cryptonews.com]
-match = -135.0%%
-title = WazirX Preliminary Investigation Finds No Evidence of ...
-url = https://cryptonews.com/news/wazirx-preliminary-investigation-finds-no-evidence-of-compromised-signer-machines-in-235m-hack.htm
+match = -140.0%%
+title = WazirX Hacker Converts Majority of Stolen Assets into Ether
+url = https://cryptonews.com/news/wazirx-hacker-converts-majority-of-stolen-assets-into-ether.htm
 
 [www.thespike.gg]
 match = -85.0%%
