--- a/images/chieu-cay-ht-14/config.ini
+++ b/images/chieu-cay-ht-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-ht-14.html
 lastopen = 2024-06-09 21:54:46
 
 [search]
-lastsearch = 2024-07-26 13:53:21
+lastsearch = 2024-07-26 14:41:18
 
 [www.diepxuan.com]
 match = -6.7%%
 title = Điệp Xuân Chiếu cây HT 160x200
-url = https://www.diepxuan.com/chieu-cay-ht-160x200.html
+url = https://www.diepxuan.com/chieu-cay-ht-160x200.html?srsltid=AfmBOooQ6htUfqjBMai6V6FALQfYFzvCGE7KeiFWp9uwmWj6BiZsKE66
 
 [shopee.vn]
 match = -40.0%%
