--- a/images/chieu-lac-soc-14/config.ini
+++ b/images/chieu-lac-soc-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-14.html
 lastopen = 2024-06-09 23:48:09
 
 [search]
-lastsearch = 2024-07-26 10:44:50
+lastsearch = 2024-07-26 14:38:34
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -19,7 +19,7 @@ url = https://www.thegioididong.com/hoi-dap/2-cach-do-size-vong-tay-lac-tay-chin
 [cellphones.com.vn]
 match = -212.5%%
 title = Balo laptop | Túi chống sốc kháng nước tốt, mẫu mới cao cấp
-url = https://cellphones.com.vn/phu-kien/balo-tui-chong-soc-laptop.html?srsltid=AfmBOorcLFwTfVjtz3sPFIw5TH-2l_gYgEhWCj4aPCgumbnpxHghGPSJ
+url = https://cellphones.com.vn/phu-kien/balo-tui-chong-soc-laptop.html
 
 [www.diepxuan.com]
 match = 87.5%%
