--- a/images/nem-everon-180x200x9/config.ini
+++ b/images/nem-everon-180x200x9/config.ini
@@ -7,9 +7,9 @@ lastopen = 2024-06-06 17:09:32
 lastsearch = 2024-07-26 14:23:04
 
 [www.everonvn.vn]
-match = -75.0%%
-title = Bảng giá đệm bông ép Everon 1m8 (1.8m hay 180 x 200)
-url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-1m8.html
+match = -105.0%%
+title = Đệm Everon Chính Hãng, Khuyến mại giảm giá đặc biệt
+url = https://www.everonvn.vn/san-pham/dem-everon.html
 
 [everon.vip]
 match = 50.0%%
