--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-07-26 11:48:24
+lastsearch = 2024-07-26 14:26:05
 
 [www.lazada.vn]
 match = -94.4%%
@@ -22,9 +22,9 @@ title = NEM Furniture JSC (@nemfurniturejsc)
 url = https://www.instagram.com/nemfurniturejsc/?hl=en
 
 [thegioinem.com]
-match = -116.7%%
-title = Top 5 nệm mỏng gấp gọn bán chạy nhất Thế Giới Nệm
-url = https://thegioinem.com/top-5-nem-mong-gap-gon-ban-chay-nhat-the-gioi-nem.html
+match = -77.8%%
+title = Top 5 nệm mềm, êm bán chạy tại Thế Giới Nệm
+url = https://thegioinem.com/top-5-nem-mem-em-ban-chay-tai-the-gioi-nem.html
 
 [cotienfoods.vn]
 match = -72.2%%
@@ -32,9 +32,9 @@ title = Khi nào nem chua chín? Cách nhận biết ...
 url = https://cotienfoods.vn/blogs/an-ngon/khi-nao-nem-chua-chin
 
 [www.facebook.com]
-match = -150.0%%
-title = Siêu Thị Nệm - 267 Phan Đình Phùng, P15, Phú Nhuận, ...
-url = https://www.facebook.com/sieuthinem267/
+match = -133.3%%
+title = Siêu Thị Nệm - Nệm gấp 3 cao su tổng hợp Thái Lan ...
+url = https://www.facebook.com/sieuthinem/posts/nệm-gấp-3-cao-su-tổng-hợp-thái-lan-khuyến-mãi-giảm-giá-đặc-biệt-tại-wwwnemvn1giả/2342249222605666/
 
 [voz.vn]
 match = 11.1%%
