--- a/images/ruot-goi-ke-everon-45x65-thap/config.ini
+++ b/images/ruot-goi-ke-everon-45x65-thap/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-everon-45x65-thap.html
 lastopen = 2024-06-09 22:44:50
 
 [search]
-lastsearch = 2024-07-26 13:40:59
+lastsearch = 2024-07-26 14:36:12
 
 [www.everonvn.vn]
 match = 68.0%%
@@ -17,9 +17,9 @@ title = Ruột gối truyền thống Everon 45x65 (Classic - Loại thấp)
 url = https://happynest.vn/shop/ERG4565T/ruot-goi-truyen-thong-everon-45x65-(classic---loai-thap).html
 
 [everonhanquoc.vn]
-match = 17.2%%
-title = Bảng giá ruột gối mỏng Everon
-url = https://everonhanquoc.vn/everon/1508/ruot-goi-mong-everon
+match = -24.1%%
+title = Ruột Gối MicreLax Everon: Giải Pháp Hoàn Hảo Cho Giấc ...
+url = https://everonhanquoc.vn/everon/12711/ruot-goi-micrelax
 
 [everonchinhhang.vn]
 match = 48.1%%
@@ -38,8 +38,8 @@ url = https://thegioichanra.com/san-pham/ruot-goi-nam-standard-everon-kich-thuoc
 
 [everon.com.vn]
 match = 48.3%%
-title = Ruột Gối Everon Micro Evermic
-url = https://everon.com.vn/ruot-goi-everon-micro-evermic/
+title = RUỘT GỐI EVERON STANDARD SOFT
+url = https://everon.com.vn/ruot-goi-standard-soft/
 
 [suongtuyet.com]
 match = 13.8%%
@@ -85,4 +85,9 @@ url = https://www.diepxuan.com/ruot-goi-ke-everon-45x65-relax.html
 match = -20.7%%
 title = 【Ruột Gối đầu Loại mỏng Everon Chính Hãng Hàn Quốc ...
 url = https://everonvn.com.vn/everon/75/ruot-goi-mong
+
+[sieuthidemhanquoc.com.vn]
+match = 0.0%%
+title = Ruột Gối Everon Flexible - Ruột Gối Đàn Hồi Cao
+url = https://sieuthidemhanquoc.com.vn/ruot-goi-everon-flexible-1808
 
