--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-26 10:57:35
+lastsearch = 2024-07-26 14:45:33
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/Ren_Gill
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlfrNJnna&sig=ACfU3U06Q2orK2-CYSVNsX562BwdrE18dA&hl=en&sa=X&ved=2ahUKEwjKrfGX6MOHAxWsF1kFHWAoItoQ6AF6BAgaEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlfrOMul9&sig=ACfU3U14bLmCwIEwvWmf8Sv-ZcHSC76Fbg&hl=en&sa=X&ved=2ahUKEwikw42Sm8SHAxVGI0QIHWnhOR0Q6AF6BAgYEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
