--- a/images/chieu-gap-dai-loan-lua-12/config.ini
+++ b/images/chieu-gap-dai-loan-lua-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-12.html
 lastopen = 2024-06-09 22:43:24
 
 [search]
-lastsearch = 2024-07-26 15:20:43
+lastsearch = 2024-07-26 15:49:38
 
 [tiki.vn]
 match = 16.0%%
@@ -54,7 +54,7 @@ url = https://www.skyscanner.com.vn/routes/tpe/han/taipei-taiwan-taoyuan-to-ha-n
 [www.bestprice.vn]
 match = -64.0%%
 title = Lịch bay Đài Loan 2024 - Tra cứu chuyến bay mới nhất ...
-url = https://www.bestprice.vn/ve-may-bay/lich-bay-dai-loan
+url = https://www.bestprice.vn/ve-may-bay/lich-bay-dai-loan?srsltid=AfmBOorNkDWIZs2cZcSRx6FMU7ehmr0S5dcm2WmRClobbupY4X_3d-B7
 
 [www.traveloka.com]
 match = -96.0%%
@@ -67,9 +67,9 @@ title = Phim Đài Loan
 url = https://tvmotchill.com/quoc-gia/phim-dai-loan/
 
 [www.youtube.com]
-match = -88.0%%
-title = Lồng Tiếng | CHỊU THUA TRƯỚC EM - Tập 12 | Trọn Bộ Phim ...
-url = https://www.youtube.com/watch?v=Qzd1oRmbvFM
+match = -108.0%%
+title = 20240412 Bản tin tiếng Việt PTS Đài Loan 公視越南語新聞
+url = https://www.youtube.com/watch?v=9v-wyYZ3zkA
 
 [znews.vn]
 match = -40.0%%
