--- a/images/chieu-nhua-thai-binh-08/config.ini
+++ b/images/chieu-nhua-thai-binh-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-08.html
 lastopen = 2024-06-09 23:16:13
 
 [search]
-lastsearch = 2024-07-26 14:28:40
+lastsearch = 2024-07-26 15:46:31
 
 [shopee.vn]
 match = -73.9%%
@@ -12,9 +12,9 @@ title = Chiếu Cói Trắng Loại Dầy Kích Thước 0.8,1m2,1m4,1m5, ...
 url = https://shopee.vn/Chiếu-Cói-Thái-Bình-Chiếu-Cói-Trắng-Loại-Dầy-Kích-Thước-0.8-1m2-1m4-1m5-1m6-1m8-2mx2m2-i.126028938.9967765201
 
 [m.facebook.com]
-match = -43.5%%
-title = Chiếu Cói Thái Bình,Chiếu Nhựa,Chiếu Trúc cao cấp
-url = https://m.facebook.com/p/Chiếu-Cói-Thái-BìnhChiếu-NhựaChiếu-Trúc-cao-cấp-100046868362224/?locale=ru_RU
+match = -13.0%%
+title = Xưởng sản xuất chiếu nhựa Thái Bình | Thai Binh
+url = https://m.facebook.com/61553157173242/
 
 [tiki.vn]
 match = -21.7%%
@@ -32,9 +32,9 @@ title = Chiếu Cói ❤️FREESHIP❤️Chiếu Thái Bình In Hoa 0,8/ ...
 url = https://www.lazada.vn/products/chieu-coi-freeshipchieu-thai-binh-in-hoa-081m21m51m61m82m2-i2001525909.html
 
 [www.sendo.vn]
-match = 30.4%%
-title = Chiếu nhựa thái bình 1m x 1m9 - chieu
-url = https://www.sendo.vn/chie-u-nhu-a-tha-i-bi-nh-1m-x-1m9-43896854.html
+match = -34.8%%
+title = Chiếu Nhựa Chung Anh Thái Bình Giá Tốt, Mua Khỏi ...
+url = https://www.sendo.vn/chieu-nhua-chung-anh-thai-binh.htm
 
 [www.facebook.com]
 match = -30.4%%
