--- a/images/chieu-truc-que-lam-loai-1-16-20/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-16-20.html
 lastopen = 2024-06-09 23:23:20
 
 [search]
-lastsearch = 2024-07-26 15:22:12
+lastsearch = 2024-07-26 15:47:12
 
 [thegioidemviet.vn]
 match = 38.7%%
@@ -12,14 +12,14 @@ title = Bảng Giá Chiếu Trúc Quế Lâm [Chính hãng
 url = https://thegioidemviet.vn/chieu-truc-que-lam/
 
 [chieutrelanlan.com]
-match = -6.5%%
-title = Chiếu trúc mắt nhỏ không viền màu đen 180x200cm (1m8)
-url = https://chieutrelanlan.com/chieu-truc-mat-nho-mau-den-loai-khong-vien-180x200cm-26.html
+match = 32.3%%
+title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
+url = https://chieutrelanlan.com/chieu-truc-p17.html?size=16
 
 [shopee.vn]
-match = -3.2%%
-title = chiếu trúc điều hòa giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chiếu trúc điều hòa
+match = 16.1%%
+title = chiếu trúc giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu trúc
 
 [tiki.vn]
 match = -6.5%%
