--- a/images/tui-singapore15/config.ini
+++ b/images/tui-singapore15/config.ini
@@ -7,9 +7,9 @@ lastopen = 2024-06-10 00:27:49
 lastsearch = 2024-07-26 15:31:34
 
 [www.tui.co.uk]
-match = -86.7%%
-title = Top things to do in Singapore | Discover
-url = https://www.tui.co.uk/discover/top-things-to-do-singapore
+match = -40.0%%
+title = Cruise Calendar 2024 / 2025
+url = https://www.tui.co.uk/cruise/cruise-calendar/
 
 [www.travelgossip.co.uk]
 match = 0.0%%
@@ -87,9 +87,9 @@ title = Asia Cruise with Mein Schiff 6 on 12/02/2025
 url = https://www.seascanner.com/cruise-k235506-asia-mein-schiff-6-singapore
 
 [www.cruisemapper.com]
-match = -240.0%%
-title = Marella Discovery 2 Itinerary, Current Position, Ship Review
-url = https://www.cruisemapper.com/ships/Marella-Discovery-2-651
+match = -180.0%%
+title = TUI Cruises - Ships and Itineraries 2024, 2025, 2026
+url = https://www.cruisemapper.com/cruise-lines/TUI-Cruises-32
 
 [www.mybaggage.com]
 match = -73.3%%
